--- a/duoduo-weather/miniprogram/app.json
+++ b/duoduo-weather/miniprogram/app.json
@@ -2,6 +2,11 @@
   "pages": [
     "pages/index/index"
   ],
+  "permission":{
+    "scope.userLocation":{
+      "desc":"位置信息将用于获取当前位置的天气情况"
+    }
+  },
   "window": {
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
